--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 scikit_image==0.15.0
 scikit-learn==0.22.2.post1
-opencv_python_headless==4.1.2.30
+opencv_python
 tensorflow==1.14.0
 requests==2.23.0
 matplotlib==2.2.3
